ax-films/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: potaris
  labels:
    app: potaris
spec:
  selector:
    app: potaris
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
