ax-films/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ax-films
  labels:
    app: ax-films
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
    - hosts:
        - ax-films.rancher.katzencluster.atlantishq.de
      secretName: ax-films-tls
  rules:
    - host: ax-films.rancher.katzencluster.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ax-films
                port:
                  number: 80
